--- a/week2/backend_1_week_2/src/main/resources/application.properties
+++ b/week2/backend_1_week_2/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/backend_course_test
 spring.datasource.username=springuser
 spring.datasource.password=Kuken
